# golf_app

./: .env.test  README.md  docker-compose.yml  pyproject.toml  sample_schema.md
app/: main.py
app/api/: courses.py  scorecard.py  users.py
app/db/: connection.py  schema.sql  scorecards_repo.py  users_repo.py
app/models/: courses.py  scorecard.py  users.py
app/scripts/: test_db.py
app/services/: courses.py  scorecard.py  users.py
app/tests/: conftest.py  test_guest_scorecards.py  test_scorecards.py  test_user_auth.py  test_user_scorecards.py
